--- a/Drafts/draft_report.ipynb
+++ b/Drafts/draft_report.ipynb
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d6a52c2c-be2b-430c-b83b-1b006fe62513",
    "metadata": {},
    "outputs": [
@@ -1632,8 +1632,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Making models with max_depth = 4... out of '1, 2, 3, 4, 5, 10, 100'\r"
+      "******* Returning Results *********** out of '1, 2, 3, 4, 5, 10, 100'\r"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>min_samples_leaf</th>\n",
+       "      <th>criterion</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>94</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.936319</td>\n",
+       "      <td>0.404802</td>\n",
+       "      <td>0.403872</td>\n",
+       "      <td>True</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>gini</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>95</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.923776</td>\n",
+       "      <td>0.399362</td>\n",
+       "      <td>0.401846</td>\n",
+       "      <td>True</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>entropy</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>97</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.8215</td>\n",
+       "      <td>0.391296</td>\n",
+       "      <td>0.402972</td>\n",
+       "      <td>True</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>entropy</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number    model_type train_accuracy validate_accuracy test_accuracy  \\\n",
+       "87           94  RandomForest       0.936319          0.404802      0.403872   \n",
+       "88           95  RandomForest       0.923776          0.399362      0.401846   \n",
+       "90           97  RandomForest         0.8215          0.391296      0.402972   \n",
+       "\n",
+       "   better_than_baseline max_depth min_samples_leaf criterion baseline_accuracy  \n",
+       "87                 True       100                2      gini           0.20559  \n",
+       "88                 True       100                2   entropy           0.20559  \n",
+       "90                 True       100                3   entropy           0.20559  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1667,10 +1760,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c41046d1-993b-40e7-be10-2beda9826b8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******* Returning Results ***********, \"lbfgs\", \"newton-cg\", \"sag\", \"saga\"saga\"\r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "      <th>solver</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>116</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.69832</td>\n",
+       "      <td>0.457325</td>\n",
+       "      <td>0.448897</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>lbfgs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>123</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.699043</td>\n",
+       "      <td>0.457137</td>\n",
+       "      <td>0.449797</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>newton-cg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>130</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.699043</td>\n",
+       "      <td>0.457137</td>\n",
+       "      <td>0.449797</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>sag</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number          model_type train_accuracy validate_accuracy  \\\n",
+       "11          116  LogisticRegression        0.69832          0.457325   \n",
+       "18          123  LogisticRegression       0.699043          0.457137   \n",
+       "25          130  LogisticRegression       0.699043          0.457137   \n",
+       "\n",
+       "   test_accuracy better_than_baseline baseline_accuracy     solver  C  \n",
+       "11      0.448897                 True           0.20559      lbfgs  1  \n",
+       "18      0.449797                 True           0.20559  newton-cg  1  \n",
+       "25      0.449797                 True           0.20559        sag  1  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results3 = model.run_logistic_reg_models(df)\n",
     "results3.sort_values('validate_accuracy', ascending=False).head(3)"
@@ -1702,10 +1892,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "18abc68d-c48e-4be4-b99c-f4cf971148f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "      <th>solver</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>116</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.69832</td>\n",
+       "      <td>0.457325</td>\n",
+       "      <td>0.448897</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>lbfgs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number          model_type train_accuracy validate_accuracy  \\\n",
+       "11          116  LogisticRegression        0.69832          0.457325   \n",
+       "\n",
+       "   test_accuracy better_than_baseline baseline_accuracy solver  C  \n",
+       "11      0.448897                 True           0.20559  lbfgs  1  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results3.sort_values('validate_accuracy', ascending=False).head(1)"
    ]
