--- a/Drafts/jerry_workbook.ipynb
+++ b/Drafts/jerry_workbook.ipynb
@@ -1435,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "1044dbe9",
+   "id": "4824de36",
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "2a844467",
+   "id": "d0b83fcf",
    "metadata": {},
    "outputs": [
     {
@@ -1507,8 +1507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "fb75141c",
+   "execution_count": 196,
+   "id": "f395d27d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,6 +1529,7 @@
     "    # move the legend outside\n",
     "    plt.legend(bbox_to_anchor = (1.05, 1), loc = 2, borderaxespad=0.)\n",
     "    plt.xlim(pd.to_datetime('1960'), pd.to_datetime('2021'))\n",
+    "#     plt.ylim()\n",
     "    plt.title('Prevalence of Relationship Topics in Lyrics')\n",
     "    plt.xlabel('Year')\n",
     "    plt.xticks(rotation = 25)\n",
@@ -1540,8 +1541,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "id": "f19a4d36",
+   "execution_count": 197,
+   "id": "4fb419c8",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b9560b24",
+   "id": "183244dc",
    "metadata": {},
    "outputs": [
     {
