--- a/Drafts/jerry_workbook.ipynb
+++ b/Drafts/jerry_workbook.ipynb
@@ -624,8 +624,9 @@
     }
    ],
    "source": [
+    "# Display all topic categories in order to label them\n",
     "for ind, topic in enumerate(lda.components_):\n",
-    "    print('-'*117)\n",
+    "    print('-'*100)\n",
     "    print('Top 50 words in topic {}'.format(ind))\n",
     "    print('-'*117)\n",
     "    top_50 = topic.argsort()[-50:]\n",
@@ -974,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "dcafd82c",
+   "id": "b6adc33f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "b1c20fa5",
+   "id": "f4729340",
    "metadata": {
     "scrolled": false
    },
@@ -1306,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "f3093123",
+   "id": "b8c4af3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1354,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "a00ae580",
+   "id": "91d795c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "97513954",
+   "id": "0553dc15",
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "e4d5c837",
+   "id": "6fde73f3",
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "974bd8e8",
+   "id": "ab06dccd",
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ddec4924",
+   "id": "530e8afe",
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f36742df",
+   "id": "cfaf485d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "04d01fd1",
+   "id": "f28fbee6",
    "metadata": {},
    "outputs": [
     {
@@ -1708,8 +1709,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "72cdb41e",
+   "execution_count": 161,
+   "id": "440048b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1736,7 @@
     "    # drop anything that isn't a relationship topic\n",
     "    df2 = df2.loc[df2['relationship_topics'] != 'other']\n",
     "    ax = df2.groupby('relationship_topics').resample('Y').size().unstack(0).rolling(5).mean()\\\n",
-    "                                      .apply(lambda row: row / row.sum(),axis=1).plot(kind = 'line', linewidth = 3, cmap = my_cmap)\n",
+    "                                      .apply(lambda row: row / row.sum(), axis=1).plot(kind = 'line', linewidth = 3, cmap = my_cmap)\n",
     "    # move the legend outside\n",
     "    plt.legend(bbox_to_anchor = (1.05, 1), loc = 2, borderaxespad=0., prop={'size': 15})\n",
     "    plt.xlim(pd.to_datetime('1960'), pd.to_datetime('2021'))\n",
@@ -1752,8 +1753,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "db68e24d",
+   "execution_count": 162,
+   "id": "e7ce3bea",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "39a30aae",
+   "id": "aeebc7f4",
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1849,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "fd6bfdd5",
+   "id": "dcf66073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1867,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "e48ee68f",
+   "id": "4f0232ee",
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1932,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "5577a290",
+   "id": "c01ebe0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1961,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "792257e4",
+   "id": "c644507d",
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "7adfc552",
+   "id": "449337f6",
    "metadata": {},
    "outputs": [
     {
@@ -2032,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "128dc00e",
+   "id": "054bed8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2059,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "1c386cc0",
+   "id": "b70448d7",
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "60094c2a",
+   "id": "54e30ae5",
    "metadata": {},
    "outputs": [
     {
@@ -2179,7 +2180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "973628de",
+   "id": "be2ca9ad",
    "metadata": {},
    "outputs": [],
    "source": []
