--- a/Drafts/draft_report.ipynb
+++ b/Drafts/draft_report.ipynb
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "03d8fbfc",
+   "id": "c753b949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c41046d1-993b-40e7-be10-2beda9826b8d",
    "metadata": {},
    "outputs": [
@@ -1791,8 +1791,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using solver: newton-cg out of \"liblinear\", \"lbfgs\", \"newton-cg\", \"sag\", \"saga\"\r"
+      "******* Returning Results ***********, \"lbfgs\", \"newton-cg\", \"sag\", \"saga\"saga\"\r"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "      <th>solver</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>116</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.69832</td>\n",
+       "      <td>0.457325</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>lbfgs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>123</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.699043</td>\n",
+       "      <td>0.457137</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>newton-cg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>130</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.699043</td>\n",
+       "      <td>0.457137</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>sag</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number          model_type train_accuracy validate_accuracy  \\\n",
+       "11          116  LogisticRegression        0.69832          0.457325   \n",
+       "18          123  LogisticRegression       0.699043          0.457137   \n",
+       "25          130  LogisticRegression       0.699043          0.457137   \n",
+       "\n",
+       "   better_than_baseline baseline_accuracy     solver  C  \n",
+       "11                 True           0.20559      lbfgs  1  \n",
+       "18                 True           0.20559  newton-cg  1  \n",
+       "25                 True           0.20559        sag  1  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1826,10 +1911,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "18abc68d-c48e-4be4-b99c-f4cf971148f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "      <th>solver</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>116</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.69832</td>\n",
+       "      <td>0.457325</td>\n",
+       "      <td>0.448897</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>lbfgs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number          model_type train_accuracy validate_accuracy  \\\n",
+       "11          116  LogisticRegression        0.69832          0.457325   \n",
+       "\n",
+       "   test_accuracy better_than_baseline baseline_accuracy solver  C  \n",
+       "11      0.448897                 True           0.20559  lbfgs  1  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results3.sort_values('validate_accuracy', ascending=False).head(1)"
    ]
