--- a/Drafts/draft_report.ipynb
+++ b/Drafts/draft_report.ipynb
@@ -960,7 +960,7 @@
    "id": "888ede95-8e60-4d69-a6b0-a2b317559668",
    "metadata": {},
    "source": [
-    "### QUESTION 1: How has Sentiment Changed Over Time"
+    "### QUESTION 1: How has song sentiment changed over time?"
    ]
   },
   {
@@ -1199,7 +1199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hyppthesis Testing  - Correlation of each topic over time"
+    "# Hypothesis Testing  - Correlation of each topic over time"
    ]
   },
   {
