update final_report, final_model

--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -1431,8 +1431,9 @@
     }
    ],
    "source": [
-    "results = model.run_decision_tree_models(df)\n",
-    "results.drop(columns='test_accuracy').head(1) # show baseline"
+    "# uncommit to run the following code\n",
+    "# results = model.run_decision_tree_models(df)\n",
+    "# results.drop(columns='test_accuracy').head(1) # show baseline"
    ]
   },
   {
@@ -1524,7 +1525,8 @@
     }
    ],
    "source": [
-    "results.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "# uncommit to run the following code\n",
+    "# results.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1655,8 +1657,9 @@
     }
    ],
    "source": [
-    "results2 = model.run_random_forest_models(df)\n",
-    "results2.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "# uncommit to run the following code\n",
+    "# results2 = model.run_random_forest_models(df)\n",
+    "# results2.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1783,8 +1786,9 @@
     }
    ],
    "source": [
-    "results3 = model.run_logistic_reg_models(df)\n",
-    "results3.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "# uncommit to run the following code\n",
+    "# results3 = model.run_logistic_reg_models(df)\n",
+    "# results3.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1880,7 +1884,8 @@
     }
    ],
    "source": [
-    "results3.sort_values('validate_accuracy', ascending=False).head(1)\n"
+    "# uncommit to run the following code\n",
+    "# results3.sort_values('validate_accuracy', ascending=False).head(1)\n"
    ]
   },
   {
